--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "fs-extra": "^11.3.0",
+    "isbot": "^5.1.28",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "qrcode": "^1.5.4",
     "request-ip": "^3.3.0",
     "speakeasy": "^2.0.0",
+    "ua-parser-js": "^2.0.3",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
