--- a/package.json
+++ b/package.json
@@ -12,10 +12,17 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "better-sqlite3": "^11.10.0",
+    "compression": "^1.8.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "csrf-csrf": "^4.0.2",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.0",
+    "express-slow-down": "^2.1.0",
     "fs-extra": "^11.3.0",
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
     "isbot": "^5.1.28",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
@@ -24,6 +31,7 @@
     "speakeasy": "^2.0.0",
     "ua-parser-js": "^2.0.3",
     "uuid": "^11.1.0",
+    "validator": "^13.15.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
   }
