Update environment configuration, enhance database settings, and improve user role management
- Modified db.js to set synchronous mode and foreign keys
- Added cookie parser middleware in index.js with error handling for missing PORT
- Enhanced roles.json to include levels for user roles
- Refactored verifyToken.js to utilize a new roler utility for permissions
- Expanded router.js with new endpoints for user management and validation

--- a/.env
+++ b/.env
@@ -1,8 +1,11 @@
-PORT=8000
+PORT=8100
 JWT_SECRET=""
 JWT_ALGORITHM="HS256"
 NODE_ENV="development"
 BOT_PROTECT="true"
+
+# DB
+DB_MODE="NORMAL" # OFF/NORMAL/FULL/EXTRA
 
 # Logger
 ENCRYPT_LOGS="false"
